// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutPage renders 1`] = `
<DocumentFragment>
  <header>
    <a
      class="main-container main-container--content flex focus:outline-none focus:ring-2 focus:ring-red-600"
      href="/"
    >
      <picture>
        <source
          media="(min-width: 640px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
        />
        <source
          media="(min-width: 480px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
        />
        <img
          alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
          src="/icons/app/icons8-dungeons-and-dragons-64.png"
        />
      </picture>
      <div
        class="font-serif text-2xl sm:text-3xl md:text-4xl self-center antialiased"
      >
        [Translation for https://example.com/global/translations.ttl#appName does not exist]
      </div>
    </a>
  </header>
  <main
    class="main-container main-container--content my-1"
  >
    <div
      class="content leading-normal max-w-prose mx-auto"
    >
      <h1
        id="test"
      >
        test
      </h1>
    </div>
  </main>
  <footer
    class="main-container main-container--content mt-2 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
  >
    <div
      class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
    >
      <a
        class="link"
        href="/about"
      >
        [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
      </a>
      <a
        class="link"
        href="/faq"
      >
        [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
      </a>
    </div>
    <div
      class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
    >
      <button
        class="button"
        data-testid="dark-mode-selector-button"
        type="button"
      >
        <span>
          <span
            class="text-black text-opacity-30"
          >
            💡
          </span>
           [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
        </span>
      </button>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`AboutPage shows a warning on non-english pages 1`] = `
<DocumentFragment>
  <header>
    <a
      class="main-container main-container--content flex focus:outline-none focus:ring-2 focus:ring-red-600"
      href="/"
    >
      <picture>
        <source
          media="(min-width: 640px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
        />
        <source
          media="(min-width: 480px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
        />
        <img
          alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
          src="/icons/app/icons8-dungeons-and-dragons-64.png"
        />
      </picture>
      <div
        class="font-serif text-2xl sm:text-3xl md:text-4xl self-center antialiased"
      >
        [Translation for https://example.com/global/translations.ttl#appName does not exist]
      </div>
    </a>
  </header>
  <main
    class="main-container main-container--content my-1"
  >
    <div
      class="bg-yellow-200 text-yellow-900 border-yellow-400 border px-2 py-1 rounded-sm mb-2"
      data-testid="about-page-language-warning"
    >
      [Translation for https://example.com/global/translations.ttl#onlyAvailableInEnglish does not exist]
    </div>
    <div
      class="content leading-normal max-w-prose mx-auto"
    >
      <h1
        id="test"
      >
        test
      </h1>
    </div>
  </main>
  <footer
    class="main-container main-container--content mt-2 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
  >
    <div
      class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
    >
      <a
        class="link"
        href="/about"
      >
        [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
      </a>
      <a
        class="link"
        href="/faq"
      >
        [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
      </a>
    </div>
    <div
      class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
    >
      <button
        class="button"
        data-testid="dark-mode-selector-button"
        type="button"
      >
        <span>
          <span
            class="text-black text-opacity-30"
          >
            💡
          </span>
           [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
        </span>
      </button>
      <a
        class="button"
        data-testid="locale-selector-language"
        href="/?locale=%F0%9F%87%B3%F0%9F%87%B4"
      >
        🇺🇸 [Translation for https://example.com/global/translations.ttl#translateTo does not exist]
      </a>
    </div>
  </footer>
</DocumentFragment>
`;
